# kalshi-deep-trading-bot

./: .gitignore  README.md  betting_models.py  config.py  env_template.txt  kalshi_client.py  openai_utils.py  pyproject.toml  requirements.txt  research_client.py  risk_management.py  strategy_engine.py  trading_bot.py
.cursor/rules/: api-documentation-lookup.mdc  trading-api-best-practices.mdc
